# agendaai

./: .editorconfig  .gitignore  README.md  briefing-inicial  ideia  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json
.agents/: README.md
.agents/contracts/: 2026-03-17_b07_booking-publico.md  2026-03-19_admin-web-ui-density-second-wave.md
.agents/roles/: backend-core-squad.md  docs-audit-squad.md  frontend-admin-squad.md  frontend-booking-squad.md  integrador.md  qa-verification-squad.md  research-squad.md  supervisor-arquiteto.md
.agents/templates/: checklist-integracao.md  contrato-de-corte.md  handoff-de-squad.md
.agents/workflows/: consultar-fontes-oficiais.md  executar-b07-booking-publico.md  executar-corte-multiagente.md  fechar-corte.md
.runtime/mockups/: relatorio-dinamico.html  relatorios-dockview-shell-mock.css  relatorios-dockview-shell-mock.html
apps/: README.md
apps/admin-web/: index.html  package.json  vite.config.ts
apps/booking-web/: package.json  tsconfig.json
apps/marketing-site/: README.md  package.json
assets/brand/: README.md
docs/00_governanca/: 00_documento_mestre_aplicacao_framework.md  01_termo_de_prontidao_de_etapa.md  02_matriz_de_rastreabilidade.md  03_relatorio_de_risco_estrutural.md  04_modelo_operacional_multiagente.md  (+1 more)
infra/: README.md
scripts/: serve-brand-guide.ps1  smoke-admin-builder-cadastros.ps1  smoke-ui-api-contracts.ps1
services/: README.md
services/analytics-python/: pyproject.toml
services/analytics-python/src/agendaai_analytics/: __init__.py  main.py
services/api-rest/: package.json  (+2 more)
(+164 files in other folders)
